# VitalMind-Insight

./: .env.development.example  .env.example  .gitignore  docker-compose.override.yml  docker-compose.yml
.github/workflows/: backend-tests.yaml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml  pytest.ini
backend/api/: __init__.py  auth.py  conversation.py  health.py  message.py  system.py  user.py
backend/api/auth/: __init__.py  auth.py  web_auth.py
backend/core/: config.py  exceptions_listener.py  limiter.py  server.py
backend/core/dependencies/: __init__.py  authentication.py  current_active_user.py  services.py
backend/core/exceptions/: base.py
backend/core/middlewares/: authentication.py
backend/core/security/: __init__.py  auth_cookies_manager.py  blacklist.py  instances.py  jwt_handler.py  limiter.py  password.py
backend/crud/: __init__.py  base.py  conversation.py  message.py  user.py
backend/db/: __init__.py  mixins.py  redis_client.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 098e81958637_added_the_conversation_and_message_.py  2692273015dd_user_table.py  7ad0ce71bcf1_added_explicit_auto_increment_true.py  93d6683c273b_base_models.py  a89a0340cb8f_added_the_created_and_updated_at_fields.py  bcb73581b61a_added_the_uuid.py
backend/db/models/: __init__.py  conversation.py  message.py  user.py
backend/models/: user.py
backend/schemas/: auth.py  conversation.py  message.py  user.py
backend/security/: password.py
backend/services/: __init__.py  auth.py  conversation.py  message.py  user.py
backend/services/llm/: base.py  manager.py  ollama_service.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  conftest.py  test_conversation.py  test_message.py  test_user.py
backend/tests/api/auth/: conftest.py  test_auth.py  test_web_auth.py
backend/tests/core/: config.py  server.py
backend/tests/db/: session.py
backend/utils/: __init__.py  cookies.py
frontend/: .env.example  .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
llm_backend/: .gitignore  docker-compose.override.yaml  main.py  pyproject.toml
llm_backend/api/: __init__.py  health.py  llm.py
llm_backend/core/: config.py  server.py
llm_backend/services/: base.py  ollama_service.py
llm_backend/utils/: __init__.py  format_response.py
(+55 files in other folders)
